# llm-gateway

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.dev.yml  compose.host.yml  compose.yml
config/: gateway.local.toml  gateway.toml  otel-collector.yaml  otel-debug.yaml  prometheus.host.yml  prometheus.yml
docs/: api.md  architecture.md  balancing-report.md  brief.md  deployment.md  level1.md  level2.md  level3.md  loadtest-report.md
docs/diagrams/: architecture.puml  c4-container.puml  c4-context.puml  circuit-breaker.puml  request-flow.puml
gateway/: Cargo.toml
gateway/src/: config.rs  crypto.rs  lib.rs  main.rs  state.rs  types.rs
gateway/src/middleware/: auth.rs  guardrails.rs  mod.rs  telemetry.rs
gateway/src/models/: agent.rs  provider.rs
gateway/src/providers/: anthropic.rs  gemini.rs  mock.rs  mod.rs  openai.rs  openai_responses.rs
gateway/src/routes/: admin.rs  chat.rs  embeddings.rs  health.rs  mod.rs  models.rs  responses.rs
gateway/src/routing/: health.rs  latency.rs  mod.rs
gateway/src/streaming/: metrics.rs  proxy.rs
gateway/tests/: agents_test.rs  auth_test.rs  chat_test.rs  endpoints_test.rs  guardrails_test.rs  health_test.rs  keys_test.rs  providers_test.rs
gateway/tests/common/: mod.rs
grafana/dashboards/: llm-gateway.json
loadtest/: Cargo.toml  baseline.js  failure.js  mixed.js  spike.js
loadtest/src/: main.rs
migrations/: 001_providers.sql  002_agents.sql  003_api_keys.sql
mock-provider/: Cargo.toml
mock-provider/src/: main.rs
