[workspace]
members = ["gateway", "mock-provider"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
async-stream = "0.3"
