[workspace]
members = ["gateway", "mock-provider", "loadtest"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fred = { version = "10", features = ["i-scripts"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
regex = "1"
sysinfo = "0.33"
aes-gcm = "0.10"
base64 = "0.22"
arc-swap = "1"
dashmap = "6"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
