[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
reqwest.workspace = true
futures.workspace = true
eventsource-stream.workspace = true
async-stream.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
fred.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
regex.workspace = true
sysinfo.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tempfile = "3"
